--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,15 @@
             "email": "jerome@gamez.name"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/husseinzaher/firebase-php.git"
+        }
+    ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "kreait/firebase-php": "^6.0",
+        "kreait/laravel-firebase": "dev-main",
         "illuminate/contracts": "^8.0 || ^9.0",
         "illuminate/support": "^8.0 || ^9.0",
         "symfony/cache": "^5.4 || ^6.0"
