--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "repositories": [
         {
-            "type": "git",
+            "type": "vcs",
             "url": "https://github.com/husseinzaher/firebase-php.git"
         }
     ],
