--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,62 @@
 {
-    "name": "kreait/laravel-firebase",
-    "description": "A Laravel package for the Firebase PHP Admin SDK",
-    "keywords": ["laravel", "firebase", "firebase", "sdk", "api", "database", "fcm", "gcm"],
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Jérôme Gamez",
-            "email": "jerome@gamez.name"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/husseinzaher/firebase-php.git"
-        }
-    ],
-    "require": {
-        "php": "^7.4 || ^8.0",
-        "illuminate/contracts": "^8.0 || ^9.0",
-        "illuminate/support": "^8.0 || ^9.0",
-        "symfony/cache": "^5.4 || ^6.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^6.0 || 7.0",
-        "symplify/easy-coding-standard": "^10.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Kreait\\Laravel\\Firebase\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Kreait\\Laravel\\Firebase\\Tests\\": "tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "3.x-dev"
-        },
-        "laravel": {
-            "providers": [
-                "Kreait\\Laravel\\Firebase\\ServiceProvider"
-            ],
-            "aliases": {
-                "Firebase": "Kreait\\Laravel\\Firebase\\Facades\\Firebase"
-            }
-        }
+  "name": "kreait/laravel-firebase",
+  "description": "A Laravel package for the Firebase PHP Admin SDK",
+  "keywords": [
+    "laravel",
+    "firebase",
+    "firebase",
+    "sdk",
+    "api",
+    "database",
+    "fcm",
+    "gcm"
+  ],
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jérôme Gamez",
+      "email": "jerome@gamez.name"
     }
+  ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/husseinzaher/firebase-php.git"
+    }
+  ],
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "kreait/firebase-php": "dev-master#^6.x-dev",
+    "illuminate/contracts": "^8.0 || ^9.0",
+    "illuminate/support": "^8.0 || ^9.0",
+    "symfony/cache": "^5.4 || ^6.0"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^6.0 || 7.0",
+    "symplify/easy-coding-standard": "^10.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Kreait\\Laravel\\Firebase\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Kreait\\Laravel\\Firebase\\Tests\\": "tests"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-main": "3.x-dev"
+    },
+    "laravel": {
+      "providers": [
+        "Kreait\\Laravel\\Firebase\\ServiceProvider"
+      ],
+      "aliases": {
+        "Firebase": "Kreait\\Laravel\\Firebase\\Facades\\Firebase"
+      }
+    }
+  }
 }
